--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "antd-mobile": "^5.20.0",
     "autoprefixer": "^10.4.8",
+    "echarts-for-react": "^3.0.2",
+    "postcss-px-to-viewport": "^1.1.1",
     "pubsub-js": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -21,7 +23,6 @@
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.0.0",
-    "postcss-px-to-viewport": "^1.1.1",
     "vite": "^3.0.0"
   }
 }
